# rust-sql-playground

./: Cargo.toml  README.md
src/: converter.rs  data_type.rs  lib.rs  value.rs  visitor_utils.rs
src/query_graph/: cloner.rs  explain.rs  json.rs  mod.rs  visitor.rs
src/query_graph/optimizer/: correlation_utils.rs  mod.rs  utils.rs
src/query_graph/optimizer/rules/: aggregate_project_transpose.rs  aggregate_pruning.rs  aggregate_remove.rs  aggregate_simplifier.rs  apply_pruning.rs  common_aggregate_discovery.rs  cte_discovery.rs  (+20 more)
src/query_graph/properties/: column_provenance.rs  correlated_input_refs.rs  equivalence_classes.rs  input_dependencies.rs  keys.rs  mod.rs  num_columns.rs  pulled_up_predicates.rs  row_type.rs  subqueries.rs
src/scalar_expr/: equivalence_class.rs  mod.rs  reduction.rs  rewrite.rs  rewrite_utils.rs  visitor.rs
tests/: explain_test.rs
tests/testdata/explain/: aggregate_project_transpose.test  aggregate_pruning.test  aggregate_remove.test  apply.test  common_aggregate_discovery.test  correlated_filter.test  correlated_project.test  cte_discovery.test  expression_reduction.test  filter_aggregate_transpose.test  filter_apply_transpose.test  filter_join_transpose.test  filter_merge.test  filter_normalization.test  filter_project_transpose.test  join_project_transpose.test  join_pruning.test  keys_filter.test  keys_join.test  keys_union.test  outer_to_inner_join.test  project_normalization.test  pulled_up_predicates.test  static_queries.test  subqueries.test  union_merge.test  union_pruning.test
tools/: cytoscape.html  d3.html  vis.html
