[package]
name = "rust-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_sql"
path = "src/lib.rs"

[[bin]]
name = "dag"

[dependencies]
datadriven = "0.7.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.99"
